--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,13 @@
 title: Distinguished Revolver
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Many Precision Pistol shooters struggle with making good Distinguished Revolver
+ammunition for practice and competition, with some using nothing but factory
+fodder! Learning to shoot a revolver is hard enough; making good .38 Special
+ammunition shouldn't be difficult. It is, however, somewhat of a lost art, as
+many in the sport of "Bullseye" (NRA Precision Pistol) have long since moved to
+using the .45 ACP for the centerfire portion of the match, and revolver use
+has declined to only speciality events.   
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
