--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,19 @@
 title: Distinguished Revolver
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-Many Precision Pistol shooters struggle with making good Distinguished Revolver
-ammunition for practice and competition, with some using nothing but factory
-fodder! Learning to shoot a revolver is hard enough; making good .38 Special
-ammunition shouldn't be difficult. It is, however, somewhat of a lost art, as
-many in the sport of "Bullseye" (NRA Precision Pistol) have long since moved to
-using the .45 ACP for the centerfire portion of the match, and revolver use
-has declined to only speciality events.   
+ Many Precision Pistol shooters have a hard time making accurate .38 Special 158
+ gr. lead ammunition for the NRA Distinguished Revolver event. What powder, what
+ case, what bullet, etc. are all questions that frequently arise in the course
+ of building an accurate load. To make matters even more difficult, not all
+ revolvers are created equal, and so what works in one may very well not work in
+ another, it is often said. Strange, though, that many believe factory ammunition
+ to be a great source of accuracy, which immediately goes against all lore and
+ narrative of most reloading shooters; i.e. that they alone can make better and
+ more accurate ammunition than the factory.
+
+ Here, I'll attempt to dispell myths, provide load data, and provide evidence
+ for what appear to be significantly well understood and broadly accepted
+ accurate loads to help cut load development time down considerably.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
