--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Distinguished Revolver
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
- This site's goal is to help reduce the ammount of load development time
- necessary for making affordable NRA Distinguished Revolver ammunition for
- either practice or competition. 
+ To help reduce the amount of load development time necessary for making
+ affordable NRA Distinguished Revolver ammunition for either practice or
+ competition.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
@@ -27,9 +27,7 @@ github_username:  w4ti
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
-  - jekyll-feed
-
+# plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
