--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
  affordable NRA Distinguished Revolver ammunition for either practice or
  competition.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://distinguishedrevolver.com" # the base hostname & protocol for your
+# site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  w4ti
 
