--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  w4ti
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 # plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
