--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.distinguishedrevolver.com" # the base hostname & protocol for your
 # site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  w4ti
+github_username:  distinguishedrevolver
 
 # Build settings
 markdown: kramdown
