--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Distinguished Revolver
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
- To share load development data in order to reduce the time necessary for making
- affordable NRA Distinguished Revolver ammunition for either practice or
- competition.
+ To share load development data in order to make accurate NRA Distinguished
+ Revolver ammunition for either practice or competition.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.distinguishedrevolver.com" # the base hostname & protocol for your
 # site, e.g. http://example.com
