--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url: "https://www.distinguishedrevolver.com" # the base hostname & protocol for 
 # twitter_username: jekyllrb
 github_username:  distinguishedrevolver
 # Google Analytics
-google_analytics: UA-157566353-1
+google_analytics: G-5G12Z62F0C
 # Build settings
 markdown: kramdown
 theme: minima
